feat: implement process name persistent storage

--- a/ScreenshotHook.Presentation/App.config
+++ b/ScreenshotHook.Presentation/App.config
@@ -28,6 +28,9 @@
             <setting name="WatermarkColorA" serializeAs="String">
                 <value>128</value>
             </setting>
+            <setting name="ProcessName" serializeAs="String">
+                <value>WeChat</value>
+            </setting>
         </ScreenshotHook.Presentation.Properties.Settings>
     </userSettings>
 </configuration>
