--- a/ScreenshotHook.Presentation/ScreenshotHook.Presentation.csproj
+++ b/ScreenshotHook.Presentation/ScreenshotHook.Presentation.csproj
@@ -21,9 +21,18 @@
   <Page Remove="bin\**" />
 </ItemGroup>
 
+<ItemGroup>
+  <None Remove="Images\Logo.ico" />
+</ItemGroup>
+
  <ItemGroup>
   <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
   <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
+  <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
+ </ItemGroup>
+
+ <ItemGroup>
+   <Resource Include="Images\Logo.ico" />
  </ItemGroup>
 
  <ItemGroup>
