--- a/ScreenshotHook.Presentation/ScreenshotHook.Presentation.csproj
+++ b/ScreenshotHook.Presentation/ScreenshotHook.Presentation.csproj
@@ -26,6 +26,7 @@
 </ItemGroup>
 
  <ItemGroup>
+  <PackageReference Include="log4net" Version="3.1.0" />
   <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
   <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
   <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
@@ -47,6 +48,12 @@
    <None Update="Properties\Settings.settings">
      <Generator>SettingsSingleFileGenerator</Generator>
      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+   </None>
+ </ItemGroup>
+
+ <ItemGroup>
+   <None Update="log4net.config">
+     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
    </None>
  </ItemGroup>
 </Project>
